samples/_failures_safe/1761176639_0ff745_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83700adc.c: In function ‘main’:
./samples/SAFE/__tmp_83700adc.c:134:9: error: expected expression at end of input
  134 |         buffer_free(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_83700adc.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83700adc.c:134:9: error: expected declaration or statement at end of input
